tests/invalid/assert_in_interface.err_exp
assert_in_interface.m:012: In interface for module `assert_in_interface':
assert_in_interface.m:012:   error: exported promise refers to predicate
assert_in_interface.m:012:   `list.last'/2 which is defined in the
assert_in_interface.m:012:   implementation section of module
assert_in_interface.m:012:   `assert_in_interface'.
assert_in_interface.m:012:   Either move the promise into the implementation
assert_in_interface.m:012:   section, or move the definition into the
assert_in_interface.m:012:   interface.
